// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | TabTitle Active 1`] = `
.c0 {
  background: none;
  display: inline-block;
  border: none;
  margin: 0;
  padding: 0;
  padding-bottom: 4px;
  color: #282823;
  border-bottom: 2px solid #0046FF;
}

<div
  className="c0"
>
  This is tab title
</div>
`;

exports[`Storyshots Atoms | TabTitle Default 1`] = `
.c0 {
  background: none;
  display: inline-block;
  border: none;
  margin: 0;
  padding: 0;
  padding-bottom: 4px;
  color: #282823;
  border-bottom: 2px solid transparent;
}

<div
  className="c0"
>
  This is tab title
</div>
`;

exports[`Storyshots Atoms | TabTitle Integration: with Flexbox 1`] = `
.c1 {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  background: none;
  display: inline-block;
  border: none;
  margin: 0;
  padding: 0;
  padding-bottom: 4px;
  color: #282823;
  border-bottom: 2px solid transparent;
}

.c3 {
  background: none;
  display: inline-block;
  border: none;
  margin: 0;
  padding: 0;
  padding-bottom: 4px;
  color: #282823;
  border-bottom: 2px solid #0046FF;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      TabTitle1
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c3"
    >
      TabTitle2
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      TabTitle3
    </div>
  </div>
</div>
`;
